# AranBorkum.github.io

./: .gitignore  config.py  docker-compose.yml  index.html  main.py  pyproject.toml
API/: strike_info_endpoint.py
alembic/versions/: 2023_01_02_1205-d640e70597dc_initial.py  2023_01_02_1209-a06af6938569_adding_strike_info_table.py
db/: strikes.py  utils.py
front-end/: index.css  index.html  index.js
strike_scraper/: scrape_engine.py  scrape_engine_helpers.py
