[tool.poetry]
name = "railstrike-notification"
version = "0.1.0"
description = ""
authors = ["Aran Borkum <aranborkum@hotmail.com>"]
readme = "README.md"
packages = [{include = "railstrike_notification"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
