[tool.poetry]
name = "railstrike-notification"
version = "0.1.0"
description = ""
authors = ["Aran Borkum <aranborkum@hotmail.com>"]
readme = "README.md"
packages = [{include = "railstrike_notification"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
httpx = "^0.23.1"
flask = "^2.2.2"
flask-restful = "^0.3.9"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
